Blackfire Player Changelog
==========================

* 0.5.0 (xxxx-xx-xx)

 * Second release. It breaks backwards compatibility. For now on, the player is
   only distributed as a .phar and can not be  embedded as a PHP project

* 0.4.6 (2016-12-05)

 * fix usage of parent build

* 0.4.5 (2016-06-21)

 * fix usage with headers defined in steps

* 0.4.4 (2016-06-21)

 * Fix typo in function name

* 0.4.3 (2016-06-20)

 * throw exceptions in case configuration is invalid

* 0.4.2 (2016-06-20)

 * made player exit with error when errors are logged

* 0.4.1 (2016-05-24)

 * fixed embedding scenarios bug

* 0.4.0 (2016-05-18)

 * updated deps
 * added log for extracted values
 * allowed endpoint to have a non-empty baseurl

* 0.3.0 (2016-01-27)

 * added reload support
 * added a default User-Agent as it is required by some web servers
 * fixed request content-type when no parameters are provided
 * added the possibility to pass any variable to regex()
 * added the merge function
 * enable debug mode in guzzle when -vvv

* 0.2.0 (2015-12-22)

 * added the possibility to configure Blackfire build references
 * added regex function
 * added the join function
 * added support for fake values

* 0.1.0 (2016-12-17)

 * Initial release