@@ -13,6 +13,7 @@ namespace Blackfire\Player\Console;
 
 use Symfony\Component\Console\Application as BaseApplication;
 use Symfony\Component\Console\Output\OutputInterface;
+use Symfony\Component\Console\Terminal;
 
 /**
  * @author Fabien Potencier <fabien@symfony.com>
@@ -36,18 +37,58 @@ final class Application extends BaseApplication
 
     public function renderException(\Exception $e, OutputInterface $output)
     {
-        $output->writeln('');
+        $output->writeln('', OutputInterface::VERBOSITY_QUIET);
+        $lines = array('[ERROR]');
 
-        $errorMessages = array(
-            '',
-            ' Something went wrong!',
-            ' Read the Player documentation at: https://blackfire.io/player ',
-            '',
-        );
-        $formattedBlock = $this->getHelperSet()->get('formatter')->formatBlock($errorMessages, 'error');
+        $terminal = new Terminal();
+        $width = $terminal->getWidth() ? $terminal->getWidth() - 1 : PHP_INT_MAX;
+        // HHVM only accepts 32 bits integer in str_split, even when PHP_INT_MAX is a 64 bit integer: https://github.com/facebook/hhvm/issues/1327
+        if (defined('HHVM_VERSION') && $width > 1 << 31) {
+            $width = 1 << 31;
+        }
+        $formatter = $output->getFormatter();
+        foreach (preg_split('/\r?\n/', $e->getMessage()) as $line) {
+            foreach ($this->splitStringByWidth($line, $width - 4) as $line) {
+                $lines[] = $line;
+            }
+        }
 
-        $output->writeln($formattedBlock);
+        $lines[] = '';
+        $lines[] = 'Player documentation at https://blackfire.io/player';
 
-        parent::renderException($e, $output);
+        $output->writeln($this->getHelperSet()->get('formatter')->formatBlock($lines, 'error', true), OutputInterface::VERBOSITY_QUIET);
+        $output->writeln('', OutputInterface::VERBOSITY_QUIET);
+    }
+
+    // from Symfony\Component\Console\Application
+    private function splitStringByWidth($string, $width)
+    {
+        // str_split is not suitable for multi-byte characters, we should use preg_split to get char array properly.
+        // additionally, array_slice() is not enough as some character has doubled width.
+        // we need a function to split string not by character count but by string width
+        if (false === $encoding = mb_detect_encoding($string, null, true)) {
+            return str_split($string, $width);
+        }
+
+        $utf8String = mb_convert_encoding($string, 'utf8', $encoding);
+        $lines = array();
+        $line = '';
+        foreach (preg_split('//u', $utf8String) as $char) {
+            // test if $char could be appended to current line
+            if (mb_strwidth($line.$char, 'utf8') <= $width) {
+                $line .= $char;
+                continue;
+            }
+            // if not, push current line to array and make new line
+            $lines[] = str_pad($line, $width);
+            $line = $char;
+        }
+        if ('' !== $line) {
+            $lines[] = count($lines) ? str_pad($line, $width) : $line;
+        }
+
+        mb_convert_variables($encoding, 'utf8', $lines);
+
+        return $lines;
     }
 }
