@@ -1,4 +1,0 @@
-#!/usr/bin/env php
-<?php
-
-require __DIR__.'/blackfire-player.php';
