@@ -11,13 +11,7 @@
 
 set_time_limit(0);
 
-if (file_exists($autoloader = __DIR__.'/../../../autoload.php')) {
-    require_once $autoloader;
-} elseif (file_exists($autoloader = __DIR__.'/../vendor/autoload.php')) {
-    require_once $autoloader;
-} else {
-    throw new \RuntimeException('Unable to find the Composer autoloader.');
-}
+require_once __DIR__.'/../vendor/autoload.php';
 
 use Blackfire\Player\Console\Application;
 
